Fix HTML encoding issues in map.html

--- a/map.html
+++ b/map.html
@@ -203,7 +203,7 @@
     // メインの処理
     async function main() {
         try {
-            const response = await fetch('data.csv');
+            const response = await fetch('data.csv?v=' + Date.now());
             if (!response.ok) throw new Error(`HTTP error! status: ${response.status}`);
             
             const csvText = await response.text();
@@ -246,4 +246,5 @@
     document.addEventListener('DOMContentLoaded', main);
 </script>
 </body>
+
 </html>
